--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           go-version: "1.19"
       - run: go build ./...
+      - run: go install github.com/onsi/ginkgo/v2/ginkgo && go get github.com/onsi/gomega/...
       - run: |
           captain run --suite-id captain-examples-ginkgo --test-results report.json -- \
             ginkgo --keep-going --json-report ./report.json ./...
