--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,6 @@ jobs:
           go-version: "1.19"
       - run: go build ./...
       - run: go install github.com/onsi/ginkgo/v2/ginkgo && go get github.com/onsi/gomega/...
-      - run: |
-          captain run --suite-id captain-examples-ginkgo --test-results report.json -- \
-            ginkgo --keep-going --json-report ./report.json ./...
+      - run: captain run captain-examples-ginkgo
         env:
           RWX_ACCESS_TOKEN: ${{ secrets.RWX_ACCESS_TOKEN }}
